# SP2022

./: CMakeLists.txt  main.cpp
assignment-1/: main.cpp  number_series.cpp  number_series.hpp  number_series_tests.cpp
lec1/: lec1.cpp  lec1.h  testing.cpp
lec2/: lec2_tests.cpp  max_functions.cpp  max_functions.h
lec3/polygon/: CMakeLists.txt  polygon.cpp  polygon.hpp  test_polygon.cpp
lec4/: main.cpp
lec5/: Base.cpp  Base.h  Derived.cpp  Derived.h  main.cpp
lib/: benchmark.cpp  benchmark.h  doctest.h
